# C-Code

./: README.md
Bash/: PCcmds.txt  backup.sh  backup_all.sh  deldup.sh  diffdel.sh  diffdelbottom.sh  diffdellbottom_old.sh  diffdelocal.sh  diffdeltop.sh  run  simplemenu.sh
Bash/chatgpt/: backup_all.sh
ChatGPT/: circbuffer.c  circbuffer_v2.c  circbuffer_v3.c  generic va_list func ptr.c  generic varlistfunc_1.c
FILE-2015/: Test-9.c  Test-9.ppj  Test-9.ppx  another.txt  file.txt  makefile
FILE-2015/Private-Libraries/: PCfunction.c  PCfunction.h  explode.c  explode.h
FILE-2015/user_lib/: user_lib_date.txt
LILI-2015/: LILI2015.c  LILI2015.ppj  LILI2015.ppx  LILI2015.tag  makefile
LILI-2015/Private-Libraries/: PCfunction.c
PCLFSM-2021/: LFSM2021.c  LFSM2021.ppj  LFSM2021.ppx  LFSM2021.tag  file.txt  makefile
PCLFSM-2021/Private-Libraries/: PCficheiro.c  PCficheiro.h
PCLFSM-2021/chatgpt/: lfsm_2021.c  makefile_v1  makefile_v2  makefile_v3
PClibs/: PCficheiro.c  PCfunction.c  PCfunction.h  PClili.c  explode.c  times-tamp.txt
PClibs/linuxlib/: notesshkey.txt
TEST_1/: Test_1.c  Test_1.ppj  Test_1.ppx  Test_1.tag  Test_2.ppx  Test_2.tag  makefile
TEST_1/Private-Libraries/: circbuffer.c
TEST_1/geany config/: makefile
TEST_1/tests/: Test-1.ppj  Test-1.ppx  Test-4.c  Test-6.c  Test-7.c  Test-7.ppj  Test-7.ppx  (+1 more)
TEST_2/: Test_2.c  Test_2.ppj  Test_2.ppx  Test_2.tag  makefile
TEST_3/: Test_2.ppx  Test_3.c  Test_3.ppj  Test_3.ppx  file.txt  makefile
TEST_4/: Test_4.c  makefile
TEST_5/: Test_5.c  log.txt
TEST_6/: Test_6.c  makefile
TEST_7/: Test_7.c  makefile
TEST_8/: CMakeLists.txt  Test_8.c
TEST_8/poop/: CMakeLists.txt  Sem título 1.odf  Sem título 1.odg  Sem título 1.ods  Sem título 1.odt  lfsm_1.txt
example/: cvs.txt  lfsm.txt  lfsm_1.txt  log.txt  test.txt
geany config/: MinGW_note.txt  makefile
geany config/linux/: CMakeLists.txt  ssfiledescriptor.c  ssfiledescriptor.h  ssserial.c  ssserial.h
(+171 files in other folders)
